--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/bolaxd/bot-read-sw#readme",
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
+    "@adiwajshing/keyed-db": "^0.2.4",
     "qrcode-terminal": "^0.12.0"
   }
 }
